--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-material-kit": "^0.5.1",
     "react-native-material-textfield": "^0.16.1",
+    "react-native-modal": "^11.5.3",
     "react-native-picker-select": "^6.3.3",
     "react-native-root-toast": "^3.2.0",
     "react-native-splash-screen": "^3.1.0",
